--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Exploring the DOM</title>
 </head>
 <body>
+    <!-- Section: Show a message when a button is clicked -->
     <button class="theMessageButton">Show message</button>
-    <div class="myMessage" ></div>
-    <ul class="fruits" ></ul>
+    <!-- Section: Clear the message -->
+    <button class="clearMessageButton">Clear message</button>
+    <!-- Section: Display a message -->
+    <div class="myMessage">Click me to toggle dark mode</div>
+    <!-- Section: Enter and show a value -->
+    <input type="text" class="theInputValue" placeholder="Enter a message">
+    <!-- Section: List of fruits -->
+    <ul class="fruits"></ul>
 
-    <script src="index.js" defer ></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
